# paper-check-saas

./: .gitignore  README.md
backend/: DATABASE_README.md  answer.txt  main.py  pyproject.toml
backend/controller/: assessment_controller.py  auth_controller.py  billing_controller.py  teacher_controller.py
backend/db/: supabase_client.py
backend/graph/: workflow.py
backend/routes/: assessment_routes.py  auth_routes.py  billing_routes.py  student_routes.py  teacher_routes.py
backend/schemas/: assessment_schema.py  auth_schema.py  billing_schema.py  student_schema.py  teacher_schema.py
backend/testing/: ai_pipeline.ipynb  answer.txt  clean.ipynb  graph.py  models.py  nodes.py  runner.py  student.txt  teacher.txt
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/hooks/: useCurrentUser.js
frontend/src/lib/: api.js
frontend/src/pages/: Billing.jsx  Dashboard.jsx  ForgotPassword.jsx  History.jsx  Login.jsx  NewCheck.jsx  Processing.jsx  Register.jsx  ResetPassword.jsx  Results.jsx  Settings.jsx  VerifyEmail.jsx
frontend/src/services/: billingApi.js
frontend/src/styles/: auth-theme.js
nodejs-backend/: README.md  package-lock.json  package.json
nodejs-backend/src/: server.js
nodejs-backend/src/config/: supabase.js
nodejs-backend/src/controllers/: assessment.controller.js  auth.controller.js  billing.controller.js  student.controller.js  teacher.controller.js
nodejs-backend/src/middleware/: auth.middleware.js  errorHandler.js
nodejs-backend/src/routes/: assessment.routes.js  (+4 more)
(+25 files in other folders)
